# kate

./: .kate.katedir  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  Makefile.am  Messages.sh  NEWS  README  TODO  acommentplugin.cpp  acommentplugin.h  acommentui.rc  acommentview.h  artisticcomment.cpp  artisticcomment.h  highlight.cpp  highlight.h  kantmain.cpp  kantmain.h  kate.kateproject  kguicommand.cpp  kguicommand.h  ktexteditor_acomment.desktop  ktexteditor_acommentrc  ktextprint.cpp  kwbuffer.cpp  kwbuffer.h  kwdialog.cpp  kwdialog.h  kwdoc.cpp  kwdoc.h  kwrite.desktop  kwriteIface.h  kwrite_component.desktop  kwrite_factory.cpp  kwrite_factory.h  kwrite_shell.rc  kwritemain.cpp  (+14 more)
app/: .kate.katedir  CMakeLists.txt  Makefile.am  kactionselector.cpp  kactionselector.h  kantapp.cpp  kantapp.h  kantappIface.h  kateIface.h  kateapp.cpp  kateapp.h  kateappIface.cpp  kateappIface.h  kateappadaptor.cpp  kateappadaptor.h  kateconfigdialog.cpp  kateconfigdialog.h  kateconfigplugindialogpage.cpp  kateconfigplugindialogpage.h  kateconsole.cpp  kateconsole.h  katedockcontainer.cpp  katedockcontainer.h  katedocmanager.cpp  katedocmanager.h  katedocmanageradaptor.cpp  katedocmanageradaptor.h  katedocmanageriface.cpp  katedocmanageriface.h  kateexternaltools.cpp  kateexternaltools.h  katefiledialog.cpp  katefilelist.cpp  katefilelist.h  katefileselector.cpp  katefileselector.h  kategrepdialog.cpp  kategrepdialog.h  katemailfilesdialog.cpp  katemailfilesdialog.h  (+52 more)
data/: .kate.katedir  CMakeLists.txt  Makefile.am  ada.xml  bash.xml  c.xml  changelog.xml  cpp.xml  css.xml  desktop.xml  diff.xml  eiffel.xml  externaltools  ferite.xml  hlconvert-ultraedit.pl  html.xml  java.xml  kant.desktop  kantpart.desktop  kantpartbrowserui.rc  kantpartui.rc  kantui.rc  kate.desktop  kate_component.desktop  kate_servicetype.desktop  kateinitplugin.desktop  katepartbrowserui.rc  katepartui.rc  kateplugin.desktop  kateprojectplugin.desktop  kateui.rc  kbasic.xml  kwrite.desktop  kwrite_component.desktop  kwriteui.rc  language.dtd  latex.xml  matlab.xml  objectivec.xml  pascal.xml  (+17 more)
document/: Makefile.am  kantattribute.cpp  kantbuffer.cpp  kantbuffer.h  kantdocmanager.cpp  kantdocmanager.h  kantdocument.cpp  kantdocument.h  kanthighlight.cpp  kanthighlight.h  kantsyntaxdocument.cpp  kantsyntaxdocument.h  kanttextline.cpp  kantvmallocator.cpp  kateattribute.cpp  kateattribute.h  katebuffer.cpp  katebuffer.h  katecmd.cpp  katecmd.h  katecmds.cpp  katecmds.h  katedialogs.cpp  katedialogs.h  katedocmanager.cpp  katedocmanager.h  katedocument.cpp  katedocument.h  katehighlight.cpp  katehighlight.h  katesyntaxdocument.cpp  katesyntaxdocument.h  katetextline.cpp  katetextline.h  katevmallocator.cpp
interfaces/: .kate.katedir  CMakeLists.txt  Mainpage.dox  Makefile.am  application.cpp  application.h  application_p.h  currentdocprovider.h  docmanager.h  document.h  documentmanager.cpp  documentmanager.h  interfaces.cpp  kantappIface.cpp  kantappIface.h  kantdocmanagerIface.cpp  kantdocmanagerIface.h  kantdocumentIface.cpp  kantdocumentIface.h  kantmainwindowIface.cpp  kantmainwindowIface.h  kantpluginIface.cpp  kantpluginIface.h  kantviewIface.cpp  kantviewIface.h  kantviewmanagerIface.cpp  kantviewmanagerIface.h  kateIface.cpp  kateappIface.cpp  kateappIface.h  katedocmanagerIface.cpp  katedocmanagerIface.h  katedocumentIface.cpp  katedocumentIface.h  katepluginIface.cpp  katepluginIface.h  kateviewIface.cpp  kateviewIface.h  kateviewmanagerIface.cpp  kateviewmanagerIface.h  (+22 more)
kwrite/: Makefile.am  highlight.cpp  highlight.h  kwattribute.cpp  kwattribute.h  kwbuffer.cpp  kwbuffer.h  kwdialog.cpp  kwdoc.cpp  kwrite.desktop  kwtextline.cpp  kwtextline.h  kwview.cpp  kwview.h  syntax.xml  syntaxdocument.cpp  syntaxdocument.h  toplevel.cpp  toplevel.h
lib/: .kate.katedir  Makefile.am  kmultitabbar.cpp  kmultitabbar.h  kmultitabbar_p.h
main/: Makefile.am  kantmain.cpp  kantmain.h  katemain.cpp  katemain.h  kwritemain.cpp  kwritemain.h
mainwindow/: Makefile.am  kantIface.h  kantmainwindow.cpp  kantmainwindow.h  kantmenuitem.h  kateIface.h  kateconfigdialog.cpp  kateconfigdialog.h  katemainwindow.cpp  katemainwindow.h  katemenuitem.h
part/: CMakeLists.txt  Makefile.am  hlparamedit.cpp  hlparamedit.h  kantpart.cpp  kantpartdocument.cpp  kantpartdocument.h  kantpartfactory.cpp  kantpartfactory.h  kantpartview.cpp  kantpartview.h  katebuffer.cpp  katebuffer.h  katecmd.h  katecmds.cpp  katecmds.h  katecodecompletion_arghint.cpp  katecodecompletion_arghint.h  katecodecompletion_iface_impl.cpp  katecodecompletion_iface_impl.h  katedialogs.cpp  katedialogs.h  katedocument.cpp  katedocument.h  kateeditor.cpp  kateeditor.h  kateexportaction.cpp  kateexportaction.h  katefactory.cpp  katefactory.h  katefiledialog.cpp  katefiledialog.h  kateglobal.h  katehighlight.cpp  katehighlight.h  katehighlightdownload.cpp  katehighlightdownload.h  katehledit_attrib.ui  kateiconborder.cpp  kateiconborder.h  (+13 more)
pics/: .kate.katedir  CMakeLists.txt  Makefile.am
pluginmanager/: Makefile.am  kantconfigplugindialogpage.cpp  kantconfigplugindialogpage.h  kantplugin.cpp  kantplugin.h  kantpluginiface.cpp  kantpluginiface.h  kantpluginmanager.cpp  kantpluginmanager.h  kateconfigplugindialogpage.cpp  kateconfigplugindialogpage.h  katepluginmanager.cpp  katepluginmanager.h
plugins/: .kate.katedir  CMakeLists.txt  Makefile.am
project/: Makefile.am  kantproject.cpp  kantproject.h  kantprojectdialog.cpp  kantprojectdialog.h  kantprojectmanager.cpp  kantprojectmanager.h
tests/: CMakeLists.txt  kateencodingtest.cpp  katetextbuffertest.cpp  katetextbuffertest.h  project.kate  project.kateproject
view/: Makefile.am  kantlistboxitem.h  kantsplitter.cpp  kantsplitter.h  kantsplitter.lo  kantsplitter.moc  kantundohistory.cpp  kantundohistory.h  kantview.cpp  kantview.h  kantviewIface.h  kantviewdialog.cpp  kantviewdialog.h  kantviewmanager.cpp  kantviewmanager.h  kantviewspace.cpp  kantviewspace.h  kateview.cpp  kateview.h  kateviewIface.h  kateviewdialog.cpp  kateviewdialog.h  kateviewhighlightaction.cpp  kateviewhighlightaction.h  (+4 more)
(+282 files in other folders)
