servicetypedir = $(kde_servicetypesdir)
servicetype_DATA = kateplugin.desktop kateprojectplugin.desktop kateinitplugin.desktop

katescriptsdir = $(kde_datadir)/kate/scripts
katescripts_DATA = sample.desktop sample.sh

xdg_apps_DATA = kate.desktop kwrite.desktop

rckatedir = $(kde_datadir)/kate
rckate_DATA = kateui.rc

rckwritedir = $(kde_datadir)/kwrite
rckwrite_DATA = kwriteui.rc

tipdir = $(kde_datadir)/kate
tip_DATA = tips
