servicetypedir = $(kde_servicetypesdir)
servicetype_DATA = kateplugin.desktop kateprojectplugin.desktop kateinitplugin.desktop

katescriptsdir = $(kde_datadir)/kate/scripts
katescripts_DATA = sample.desktop
katescripts_SCRIPTS = sample.sh

xdg_apps_DATA = kate.desktop kwrite.desktop

rckatedir = $(kde_datadir)/kate
rckate_DATA = kateui.rc externaltools

rckwritedir = $(kde_datadir)/kwrite
rckwrite_DATA = kwriteui.rc

tipdir = $(kde_datadir)/kate
tip_DATA = tips

mime_DATA = x-kate-project.desktop
mimedir = $(kde_mimedir)/application

updatedir = $(kde_datadir)/kconf_update
update_DATA = kate-2.4.upd

kde_conf_DATA = katerc

