servicetypedir = $(kde_servicetypesdir)
servicetype_DATA = kateplugin.desktop

xdg_apps_DATA = kate.desktop

rckatedir = $(kde_datadir)/kate
rckate_DATA = kateui.rc externaltools

tipdir = $(kde_datadir)/kate
tip_DATA = tips

updatedir = $(kde_datadir)/kconf_update
update_DATA = kate-2.4.upd

kde_conf_DATA = katerc
