KDE_CXXFLAGS = $(USE_RTTI)  -DQT_CLEAN_NAMESPACE -DQT_NO_COMPAT -DQT_NO_ASCII_CAST

noinst_LIBRARIES = libkantdocument.a
libkantdocument_a_SOURCES = kantdocument.cpp kantdocmanager.cpp

EXTRA_DIST = kantdocument.cpp kantdocument.h kantdocmanager.cpp kantdocmanager.h

INCLUDES= $(all_includes)

METASOURCES = AUTO
