noinst_LTLIBRARIES = libkantdocument.la libkantdocumentinternal.la
libkantdocument_la_SOURCES = kantdocument.cpp kantattribute.cpp kantvmallocator.cpp kanttextline.cpp kantbuffer.cpp kanthighlight.cpp kantsyntaxdocument.cpp
libkantdocumentinternal_la_SOURCES = kantdocmanager.cpp

INCLUDES= $(all_includes)

METASOURCES = AUTO
