noinst_LTLIBRARIES = libkatedocument.la
libkatedocument_la_SOURCES = katedocmanager.cpp katedocumentIface.skel katecmd.cpp katedocument.cpp katevmallocator.cpp katetextline.cpp katebuffer.cpp katehighlight.cpp katesyntaxdocument.cpp katedialogs.cpp katecmds.cpp

INCLUDES= $(all_includes)

METASOURCES = AUTO
