KDE_CXXFLAGS = $(USE_RTTI)  -DQT_CLEAN_NAMESPACE -DQT_NO_COMPAT -DQT_NO_ASCII_CAST

noinst_LIBRARIES = libkantmainwindow.a
libkantmainwindow_a_SOURCES = kantmainwindow.cpp kantIface.skel

EXTRA_DIST = kantmainwindow.cpp kantmainwindow.h kantmenuitem.h kantIface.h

INCLUDES= $(all_includes)

METASOURCES = AUTO
