KDE_CXXFLAGS = $(USE_RTTI)  -DQT_CLEAN_NAMESPACE -DQT_NO_COMPAT -DQT_NO_ASCII_CAST

noinst_LIBRARIES = libkantproject.a
libkantproject_a_SOURCES = kantprojectmanager.cpp kantprojectdialog.cpp kantproject.cpp

EXTRA_DIST = kantprojectmanager.cpp kantprojectmanager.h kantprojectdialog.cpp kantprojectdialog.h kantproject.cpp kantproject.h

INCLUDES= $(all_includes) -I../../piper

METASOURCES = AUTO
