KDE_CXXFLAGS = $(USE_RTTI)  -DQT_CLEAN_NAMESPACE -DQT_NO_COMPAT -DQT_NO_ASCII_CAST

noinst_LIBRARIES = libkantview.a
libkantview_a_SOURCES = kantview.cpp kantviewspace.cpp kantviewmanager.cpp

EXTRA_DIST = kantviewspace.cpp kantviewspace.h kantview.cpp kantview.h kantviewmanager.cpp kantviewmanager.h kantlistboxitem.h

INCLUDES= $(all_includes)

METASOURCES = AUTO
